[package]
name = "roguelike-macroquad"
version = "0.1.0"
authors = ["kirinokirino <kirinokirino@lunariko.com>"]
edition = "2018"
description = "Following the Roguelike Tutorial with the different engine."
repository = "https://github.com/kirinokirino/roguelike-macroquad"
documentation = ""
homepage = ""
readme = "README.md"
license = "mit"
keywords = ["game"]
categories = ["games"]

[dependencies]
macroquad = "0.2.9"
legion = { version = "0.3.1", default-features = false, features = ["codegen"]}
fastrand = "1.4.0"
symmetric-shadowcasting = "0.2.0"

[profile.dev]
opt-level = 1
